# aoc

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/aoc/: __init__.py  format.py  paths.py  runner.py  scaffold.py  template_solution.py  utils.py
src/aoc/2025/day01/: solution.py
src/aoc/2025/day01/tests/: test_input01.txt
src/aoc/2025/day02/: solution.py
src/aoc/2025/day02/tests/: test_input01.txt
src/aoc/2025/day03/: solution.py
src/aoc/templates/: solution.py  test_solution.py
src/aoc/utils/: interval.py  testing.py
src/aoc/years/2025/day01/: solution.py  test_solution.py
src/aoc/years/2025/day02/: solution.py  test_solution.py
src/aoc/years/2025/day03/: solution.py  test_solution.py
src/aoc/years/2025/day04/: solution.py  test_solution.py
src/aoc/years/2025/day05/: solution.py  test_solution.py
src/aoc/years/2025/day06/: solution.py  test_solution.py
src/aoc/years/2025/day07/: solution.py  test_solution.py
src/aoc/years/2025/day08/: solution.py  test_solution.py
